--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -4,7 +4,7 @@
 
   --fd-color-white: #fff;
   --fd-color-dark: #10111E;
-  --fd-color-secondary: #0B2B3C;
+  --fd-color-secondary: #071330;
   --fd-color-primary: #7BAE00;
   --fd-color-red: #DE0808;
   --fd-color-silver: #D9D9D9;
